<resources>
    <string name="app_name">DotaBoost</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- Menu Items -->
    <string name="nav_my_stat">My stats</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_counter">Counter Picks</string>
    <string name="nav_settings">Settings</string>


    <!-- Error Fragment -->
    <string name="error_could_not_find">Could not find the page.</string>


    <!-- Player Fragment -->
    <string name="player_kda">KDA</string>
    <string name="player_rate">Win rate</string>
    <string name="player_recent">Recent Matches</string>
    <string name="player_most">Most Played Heroes</string>


    <!-- Match Fragment -->
    <string name="match_id">Match ID:</string>


    <!-- Settings Fragment -->
    <string name="settings_myaccount">My Account</string>
    <string name="settings_myaccount_default">No account has been set</string>



    <!-- Toasts -->
    <string name="warning_account_not_set">Account has not been set!</string>
    <string name="warning_could_not_load">Could not find the data</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
