<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_mystat"
            android:icon="@drawable/ic_menu_personal"
            android:title="@string/nav_my_stat" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_star"
            android:title="@string/nav_favorite" />
        <item
            android:id="@+id/nav_counterpick"
            android:icon="@drawable/ic_menu_mouse"
            android:title="@string/nav_counter" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings" />
    </group>

</menu>
