<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="us.qywang.dotaboost.PlayerViewFragment"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->
    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="102dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/playerPicture"
            android:layout_marginTop="25dp"
            android:src="@drawable/default_profile"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Player Name"
            android:id="@+id/playerName"
            android:layout_alignTop="@+id/playerPicture"
            android:layout_toRightOf="@+id/playerPicture"
            android:layout_toEndOf="@+id/playerPicture"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="000000000"
            android:id="@+id/playerId"
            android:layout_below="@+id/playerName"
            android:layout_alignLeft="@+id/playerName"
            android:layout_alignStart="@+id/playerName" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerStarButton"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_yellowstar_24dp_off"
            android:layout_marginRight="26dp"
            android:layout_marginEnd="26dp"
            android:layout_alignTop="@+id/playerPicture"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="@color/backgroundGray"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/player_kda"
                    android:id="@+id/textView3"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="27dp"
                    android:layout_marginStart="27dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="0%"
                    android:id="@+id/playerKDA"
                    android:layout_marginRight="29dp"
                    android:layout_marginEnd="29dp"
                    android:layout_alignTop="@+id/textView3"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:background="@color/backgroundGray"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/player_rate"
                    android:id="@+id/textView4"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="27dp"
                    android:layout_marginStart="27dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="0%"
                    android:id="@+id/playerWinRate"
                    android:layout_marginRight="29dp"
                    android:layout_marginEnd="29dp"
                    android:layout_alignTop="@+id/textView4"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:id="@+id/playerToggleMostPlayed"
                    android:background="@color/backgroundGray">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/player_most"
                        android:id="@+id/textView6"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="27dp"
                        android:layout_marginStart="27dp" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/playerToggleMostPlayedButton"
                        android:src="@drawable/ic_keyboard_arrow_down_24dp"
                        android:background="@android:color/transparent"
                        android:layout_alignBottom="@+id/textView6"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="31dp"
                        android:layout_marginEnd="31dp" />

                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/playerMostPlayedList"
                    android:layout_below="@+id/playerToggleMostPlayed">

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:id="@+id/playerToggleMatches"
                    android:background="@color/backgroundGray">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/player_recent"
                        android:id="@+id/textView5"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="27dp"
                        android:layout_marginStart="27dp" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/playerToggleMatchesButton"
                        android:src="@drawable/ic_keyboard_arrow_down_24dp"
                        android:background="@android:color/transparent"
                        android:layout_alignBottom="@+id/textView5"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="31dp"
                        android:layout_marginEnd="31dp" />

                </RelativeLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/playerToggleMatches"
                    android:id="@+id/playerMatchesList">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="View Matches"
                        android:id="@+id/match_button"
                        android:layout_gravity="left|top"
                        android:layout_alignParentBottom="true"
                        android:layout_alignLeft="@+id/playerPicture"
                        android:layout_alignStart="@+id/playerPicture" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
